--- a/ZhongWenKaraoke/Base.lproj/Main.storyboard
+++ b/ZhongWenKaraoke/Base.lproj/Main.storyboard
@@ -220,31 +220,61 @@
                                 <rect key="frame" x="16" y="72" width="343" height="546"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="LyricLineCell" textLabel="dJO-zt-JKt" style="IBUITableViewCellStyleDefault" id="OPP-eH-lwF">
-                                        <rect key="frame" x="0.0" y="28" width="343" height="44"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="LyricLineCell" rowHeight="100" id="OPP-eH-lwF" customClass="LyricLineCell" customModule="ZhongWenKaraoke" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="343" height="100"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="OPP-eH-lwF" id="cd4-xX-dcr">
-                                            <rect key="frame" x="0.0" y="0.0" width="343" height="43.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="343" height="99.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="dJO-zt-JKt">
-                                                    <rect key="frame" x="15" y="0.0" width="313" height="43.5"/>
-                                                    <autoresizingMask key="autoresizingMask"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UJd-jn-QSs" userLabel="TradOrPinyin">
+                                                    <rect key="frame" x="0.0" y="4" width="343" height="21"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="21" id="zQi-PU-EBi"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="テキストテキストテキスト" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="X2n-C7-3Z1" userLabel="simplified">
+                                                    <rect key="frame" x="0.0" y="25" width="343" height="70"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="trailing" secondItem="UJd-jn-QSs" secondAttribute="trailing" id="4vQ-B7-isK"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="X2n-C7-3Z1" secondAttribute="bottom" constant="-3.5" id="TY7-P8-4cd"/>
+                                                <constraint firstItem="UJd-jn-QSs" firstAttribute="leading" secondItem="X2n-C7-3Z1" secondAttribute="leading" id="Ud2-qY-sbg"/>
+                                                <constraint firstItem="UJd-jn-QSs" firstAttribute="top" secondItem="cd4-xX-dcr" secondAttribute="topMargin" constant="-4" id="l35-sr-TVP"/>
+                                                <constraint firstItem="X2n-C7-3Z1" firstAttribute="top" secondItem="UJd-jn-QSs" secondAttribute="bottom" id="uLD-sG-pOO"/>
+                                                <constraint firstItem="UJd-jn-QSs" firstAttribute="trailing" secondItem="X2n-C7-3Z1" secondAttribute="trailing" id="vIg-Cs-RCq"/>
+                                                <constraint firstItem="UJd-jn-QSs" firstAttribute="leading" secondItem="cd4-xX-dcr" secondAttribute="leading" id="via-HW-uHJ"/>
+                                            </constraints>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="simplified" destination="X2n-C7-3Z1" id="Lbf-Wy-Hkk"/>
+                                            <outlet property="tradOrpinyin" destination="UJd-jn-QSs" id="0i5-n8-Ce9"/>
+                                        </connections>
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="biD-89-aDw" userLabel="Cycle">
+                                <rect key="frame" x="310" y="583" width="39" height="30"/>
+                                <state key="normal" title="Cycle"/>
+                                <connections>
+                                    <action selector="didTapCycle:" destination="1Gm-NZ-yom" eventType="touchUpInside" id="YgE-KY-2ai"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="K0Q-dS-bh2" firstAttribute="top" secondItem="LbA-mg-9LE" secondAttribute="bottom" constant="8" symbolic="YES" id="1PX-hp-AY6"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="biD-89-aDw" secondAttribute="trailing" constant="10" id="X3z-Vv-sB7"/>
                             <constraint firstItem="K0Q-dS-bh2" firstAttribute="bottom" secondItem="W0Z-0i-3fa" secondAttribute="top" id="fKV-Sf-vMj"/>
                             <constraint firstItem="K0Q-dS-bh2" firstAttribute="trailing" secondItem="yVU-w9-CkR" secondAttribute="trailingMargin" id="gN2-kg-wzs"/>
+                            <constraint firstItem="W0Z-0i-3fa" firstAttribute="top" secondItem="biD-89-aDw" secondAttribute="bottom" constant="5" id="njD-Yy-fT1"/>
                             <constraint firstItem="K0Q-dS-bh2" firstAttribute="leading" secondItem="yVU-w9-CkR" secondAttribute="leadingMargin" id="oPt-ju-l0w"/>
                         </constraints>
                     </view>
